# Emeraldcoin

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: block.rs  blockchain.rs  config.rs  lib.rs  main.rs  proof_of_work.rs  server.rs  transaction.rs  utxo_set.rs  wallet.rs
