[package]
name = "emeraldcoin"
authors = ["officialemeraldnetwork"]
version = "0.1.0"
edition = "2024"

description = "A minimal blockchain implementation in Rust for demonstration purposes (e.g., job interviews)."
repository = "https://github.com/officialemeraldnetwork/emeraldcoin"
readme = "README.md"
keywords = ["blockchain", "rust", "interview", "demo"]
categories = ["algorithms", "cryptography","crypto"]


[dependencies]
ring = "0.16.20"
data-encoding = "2.3.2"
num-bigint = "0.4.3"
sled = "0.34.7"
serde = { version = "1.0.132", features = ["derive"] }
bincode = "1.3.3"
structopt = "0.3.25"
clap = "2.34.0"
rust-crypto = "0.2.36"
bs58 = "0.4.0"
rustc-serialize = "0.3.24"
uuid = { version = "0.8.2", features = ["v4"]}
log = "0.4.14"
env_logger = "0.9.0"
serde_json = "1.0.73"
once_cell = "1.9.0"

[dev-dependencies]
assert_cmd = "0.11.0"
